--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.transform-custom {
+    transform: rotate3d(0, 1, 0, -40deg) skewy(-13deg);
+}
+
+.text-vertical-custom {
+    writing-mode: vertical-rl;
+    text-orientation: upright
+}
