--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -3,17 +3,21 @@
 @tailwind utilities;
 
 .transform-custom {
-    transform: rotateY(47deg) skewy(4deg);
+    transform: rotateY(48deg) skewy(-30deg);
 }
 
 .text-vertical-custom {
-    writing-mode: vertical-lr;
+    writing-mode: horizontal-tb;
     text-orientation: upright
 }
 
 .perspective-custom {
-    perspective-origin: top;
-    perspective: 587px;
+    perspective-origin: bottom;
+    perspective: 593px;
+}
+
+.input-perspective {
+    perspective: 545px;
 }
 
 .scrollbar-custom::-webkit-scrollbar {
